# Forge

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: config.py  exceptions.py  logging.py  main.py
app/api/: health.py  webhook.py
app/converters/: block_builder.py  feishu_block_types.py  inline_parser.py  md2feishu.py  simple_md.py
app/db/: checkpointer.py  engine.py  models.py
app/graph/: __init__.py  builder.py  state.py  tool_registry.py
app/prompts/: __init__.py  _versioning.py  clarify_question.py  doc_content.py  doc_structure.py  intent_parser.py  mod_intent_parser.py  planner.py  ppt_content.py  ppt_structure.py
app/repositories/: task_repo.py
app/schemas/: agent_state.py  artifacts.py  doc_outline.py  enums.py  feishu_event.py  intent.py  lego.py  modification.py  plan.py  ppt.py
app/services/: asr_service.py  calendar_context.py  chroma_service.py  design_tokens.py  echo_responder.py  embedding_service.py  event_dedup.py  feishu_doc_service.py  feishu_security.py  (+9 more)
data/: demo_seed.yaml
deploy/: README.md  forge-api.service  forge-chromadb.service  forge-worker.service  nginx-forge.conf  sudoers-forge
docs/: feishu-app-setup.md  setup.md  troubleshooting.md
scripts/: build_demo_pptx.py  deploy.sh  install-services.sh  probe_feishu_slide_api.py  seed_data.py  smoke-infra.py  smoke_demo_pipeline.py  smoke_doc_api.py  smoke_feishu_asr.py  start-services.sh  status-services.sh  stop-services.sh  wait-for-services.sh
tests/: conftest.py  test_agent_state_migration.py  test_asr_service.py  test_card_builder.py  test_config.py  test_demo_tasks.py  test_event_dedup.py  test_exceptions.py  test_feishu_asr_client.py  test_feishu_doc_service.py  test_feishu_event.py  test_feishu_models.py  test_feishu_security.py  test_intent_parser_golden.py  test_intent_router.py  test_message_router.py  test_misc_coverage.py  test_ppt_service.py  test_progress_broadcaster.py  test_react_filter.py  test_schemas.py  test_seed_data.py  test_tasks.py  test_webhook.py
(+94 files in other folders)
